@@ -1,3 +1,8 @@
+2008-01-10  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* shapefil.h: Avoid _ prefix on #defines.
+	http://bugzilla.maptools.org/show_bug.cgi?id=1840
+
 2008-01-03  Bram de Greve <bram.degreve@bramz.net>
 
 	* dbfopen.c: in DBFCreate, use default code page
